--- a/src/components/Game/Tile.module.css
+++ b/src/components/Game/Tile.module.css
@@ -12,6 +12,7 @@
     vertical-align: middle;
     box-sizing: border-box;
     color: var(--tile-text-color);
+    text-transform: capitalize;
 }
 
 .Tile.Wrong {
