--- a/src/components/Keyboard/Key.module.css
+++ b/src/components/Keyboard/Key.module.css
@@ -8,6 +8,7 @@
     border: 0;
     outline: 0;
     font-size: 1.7rem;
+    text-transform: capitalize;
     cursor: pointer;
     margin-right: 0.5rem;
 }
