--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,15 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
+
+@media screen and (max-width: 768px) {
+    html {
+        font-size: 50%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 40%;
+    }
+}
